Don't update height in LayoutBlock::markFixedPositionObjectForLayoutIfNeeded.

This prevented LayoutBlockFlow::layoutBlockFlow from seeing that the height had
changed.  As a result, it failed to set relayoutChildren = true.

The bug affects fixed-pos objects in abs-pos containers, so it got worse with
http://crrev.com/1172153004 but existed before.

An equivalent patch for width was made in http://crrev.com/171463003.

Additionally, update the early return for the case where the abs-pos container
is the LayoutView.  (This is just an optimization.)

BUG=640639

Review-Url: https://chromiumcodereview.appspot.com/2429113002
Cr-Commit-Position: refs/heads/master@{#426515}

Former-commit-id: 1abcf254f3e55be39879ca76d268192faf64a254